# cookiecutter-django-telegram-bot

./: README.md
{{ cookiecutter.project_slug }}/: .env.example  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: deploy.yml
{{ cookiecutter.project_slug }}/core/: bot.py  utils.py
{{ cookiecutter.project_slug }}/core/management/commands/: start_bot.py
{{ cookiecutter.project_slug }}/deployment/: Dockerile.bot  entrypoint.sh
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: settings.py
